--- a/style.css
+++ b/style.css
@@ -108,3 +108,49 @@
  }
 
  /* ===  section-3  === */
+  .section-3 {
+    margin: 80px 0;
+  }
+
+  .se-3-b {
+    font-size: 20px;
+  }
+
+  .se-3-h2 {
+    font-size: 45px;
+  }
+
+  .se-3-p {
+    margin-bottom: 50px;
+  }
+
+  .se-3-buttom {
+    display: flex;
+  }
+
+  .a2,
+  .a4 {
+    padding: 10px;
+    margin: 70px 30px;
+    background-color: rgb(216, 216, 216);
+  }
+
+  .b1,
+  .b3 {
+    background-color: rgb(200, 197, 193);
+    padding: 10px;
+  }
+
+  .se-3-img {
+    width: 280px;
+    height: 255px;
+  }
+
+  .se-3-hr {
+    width: 50px;
+    background-color: rgb(0, 0, 0);
+  }
+
+
+  /* ===  section-4  === */
+  
