--- a/style.css
+++ b/style.css
@@ -163,9 +163,9 @@
  }
 
  .men-right {
-  /* background-color: #0056b3; */
-   position: relative; 
-   width: 300px; 
+   /* background-color: #0056b3; */
+   position: relative;
+   width: 300px;
    height: 350px;
  }
 
@@ -220,23 +220,23 @@
    font-size: 0.95rem;
    color: #33333379;
  }
- 
- .call-link {
-  display: inline-flex;
-  align-items: center;
-  text-decoration: none;
-  color: #333;        
-  font-weight: bold;
-  font-size: 22px;
-}
 
-.call-link i {
-background-color: rgb(224, 76, 76);
-padding: 12px;
-border-radius: 20px;
-  margin-right: 8px;  
-  color: rgb(228, 223, 223);       
-}
+ .call-link {
+   display: inline-flex;
+   align-items: center;
+   text-decoration: none;
+   color: #333;
+   font-weight: bold;
+   font-size: 22px;
+ }
+
+ .call-link i {
+   background-color: rgb(224, 76, 76);
+   padding: 12px;
+   border-radius: 20px;
+   margin-right: 8px;
+   color: rgb(228, 223, 223);
+ }
 
 
  @media (max-width: 900px) {
@@ -260,93 +260,181 @@ border-radius: 20px;
 
 
  /*=== section-1  = About  ===*/
-  .section-1 {
-    display: flex;
-    justify-content: space-between;
-    gap: 40px;
-    flex-wrap: wrap;
-  }
+ .section-1 {
+   display: flex;
+   justify-content: space-between;
+   gap: 40px;
+   flex-wrap: wrap;
+ }
 
-  .section-1-left {
-    flex: 1;
-    min-width: 400px;
-  }
+ .section-1-left {
+   flex: 1;
+   min-width: 400px;
+ }
 
-  .section-1-left img {
-    width: 600px;
-    height: 600px;
-    object-fit: cover;
-    border-radius: 20px;
-    display: block;
-    max-width: 100%;
-  }
+ .section-1-left img {
+   width: 600px;
+   height: 600px;
+   object-fit: cover;
+   border-radius: 20px;
+   display: block;
+   max-width: 100%;
+ }
 
-  .section-1-right {
-    flex: 1;
-    min-width: 280px;
-    padding:0 40px;
-    margin: 0 30px;
+ .section-1-right {
+   flex: 1;
+   min-width: 280px;
+   padding: 0 40px;
+   margin: 0 30px;
 
-  }
+ }
 
-  .section-1-right b {
-    color: #000000;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-size: 14px;
-  }
+ .section-1-right b {
+   color: #000000;
+   text-transform: uppercase;
+   letter-spacing: 1px;
+   font-size: 14px;
+ }
 
-  .section-1-right h2 {
-    margin-top: 20px;
-    font-size: 3.5rem;
-    /* margin: 15px 0px; */
-    color: #333;
-    line-height: 1.3;
-  }
+ .section-1-right h2 {
+   margin-top: 20px;
+   font-size: 3.5rem;
+   /* margin: 15px 0px; */
+   color: #333;
+   line-height: 1.3;
+ }
 
-  .section-1-right p {
-    margin-top: 20px;
-    color: #555555ab;
-    font-size: 19px;
-    line-height: 2.4;
-    margin-bottom: 20px;
-  }
+ .section-1-right p {
+   margin-top: 20px;
+   color: #555555ab;
+   font-size: 19px;
+   line-height: 2.4;
+   margin-bottom: 20px;
+ }
 
-  .section-1-right button {
-    color: #000000;
-    padding: 13px 34px;
-    border-radius: 30px;
-    cursor: pointer;
-    font-size: 19px;
-    transition: background 0.3s;
-  }
+ .section-1-right button {
+   color: #000000;
+   padding: 13px 34px;
+   border-radius: 30px;
+   cursor: pointer;
+   font-size: 19px;
+   transition: background 0.3s;
+ }
 
-  .section-1-right button:hover {
-    background: #8ee356;
-  }
-
-
-  @media (max-width: 768px) {
-    .section-1 {
-      flex-direction: column;
-      text-align: center;
-    }
-
-    .section-1-left,
-    .section-1-right {
-      min-width: 100%;
-    }
-
-    .section-1-left img {
-      width: 100%;
-      height: auto;
-    }
-
-    .section-1-right {
-      margin-top: 20px;
-    }
-  }
+ .section-1-right button:hover {
+   background: #8ee356;
+ }
 
 
-  /* ===  section-2  === */
-  
+ @media (max-width: 768px) {
+   .section-1 {
+     flex-direction: column;
+     text-align: center;
+   }
+
+   .section-1-left,
+   .section-1-right {
+     min-width: 100%;
+   }
+
+   .section-1-left img {
+     width: 100%;
+     height: auto;
+   }
+
+   .section-1-right {
+     margin-top: 20px;
+   }
+ }
+
+
+ /* ===  section-2  === */
+ .section-2 {
+   margin: 100px;
+   display: flex;
+   justify-content: space-between;
+   padding: 60px 0%;
+ }
+
+ .section-2-left {
+   flex: 0.5;
+ }
+
+ .section-2-img {
+   width: 330px;
+   height: 440px;
+   border-radius: 30px;
+   display: block;
+ }
+
+ .section-2-right {
+   flex: 1;
+   margin-left: 70px;
+   margin-right: 300px;
+ }
+
+ .section-2-right i {
+   margin-top: 29px;
+   display: inline-block;
+   font-size: 40px;
+   color: #ff6b6b;
+   line-height: 1;
+ }
+
+ .section-2-right h3 {
+   font-size: 1.5rem;
+   font-style: italic;
+   color: #333333b7;
+   margin: 10px 0;
+   line-height: 1.9;
+ }
+
+ .signechar-img {
+   width: 140px;
+   height: 80px;
+   display: block;
+   margin-top: 30px;
+   margin-bottom: 10px;
+ }
+
+ .section-2-right b {
+   margin-top: 20px;
+   margin-bottom: 10px;
+   display: block;
+   font-size: 16px;
+   color: #000;
+ }
+
+ .section-2-right p {
+   background-color: #e86190;
+   width: 180px;
+   height: 20px;
+   color: #000000;
+   font-size: 14px;
+   margin: 0 0 5px 0;
+ }
+
+ /* responsive */
+ @media (max-width: 768px) {
+   .section-2 {
+     flex-direction: column;
+     text-align: center;
+   }
+
+   .section-2-left,
+   .section-2-right {
+     min-width: 100%;
+   }
+
+   .section-2-img {
+     max-width: 100%;
+   }
+
+   .signechar-img {
+     margin-left: auto;
+     margin-right: auto;
+   }
+ }
+
+
+ /* ===  section-3  === */
