--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,7 +32,7 @@
  }
 
  .section-men {
-   background-image: url('https://websitedemos.net/daycare-02/wp-content/uploads/sites/1041/2022/03/day-care-hero-blobs-background.svg');
+   background-image: url('img/main.svg');
    background-repeat: no-repeat;
    background-size: 50% 150%;
    background-position: right;
