--- a/0-CodeCrafters/PG-25/school-p/style.css
+++ b/0-CodeCrafters/PG-25/school-p/style.css
@@ -31,8 +31,9 @@
    font-weight: 400;
  }
 
- .section-men {
-   background-image: url('https://websitedemos.net/daycare-02/wp-content/uploads/sites/1041/2022/03/day-care-hero-blobs-background.svg');
+ .section-main {
+   /* background-image: url('https://websitedemos.net/daycare-02/wp-content/uploads/sites/1041/2022/03/day-care-hero-blobs-background.svg'); */
+   background-image: url('/img/main.svg');
    background-repeat: no-repeat;
    background-size: 50% 150%;
    background-position: right;
