--- a/0-CodeCrafters/PG-25/school-p/style.css
+++ b/0-CodeCrafters/PG-25/school-p/style.css
@@ -32,12 +32,12 @@
  }
 
  .section-main {
-   /* background-image: url('https://websitedemos.net/daycare-02/wp-content/uploads/sites/1041/2022/03/day-care-hero-blobs-background.svg'); */
-   background-image: url('/img/main.svg');
+   background-image: url('img/main.svg');
+   background-image: url('https://websitedemos.net/daycare-02/wp-content/uploads/sites/1041/2022/03/day-care-page-header-blobs.svg');
    background-repeat: no-repeat;
    background-size: 50% 150%;
    background-position: right;
-   background-color: #f9f9f9;
+   background-color: #f6fdfe;
 
  }
 
@@ -111,7 +111,7 @@
    }
  }
 
- /* ===  men  ===*/
+ /* ===  main  ===*/
  .main {
    margin: 0 15%;
    padding: 10px;
@@ -1150,7 +1150,7 @@
 
  /* ===  section-11  === */
  .section-foot {
-  background-image: url(img/1.png);
+  background-image: url('/img/1.png');
   padding: 110px 20px;
   text-align: center;
   font-family: 'Outfit', sans-serif;
