--- a/CSS/about.css
+++ b/CSS/about.css
@@ -27,8 +27,8 @@ body {
 
 .main-div {
 
-    margin: 0 20%;
-    margin-top: 40px;
+    /* margin: 0 20%; */
+    /* margin-top: 40px; */
 }
 
 .main-div b {
@@ -42,10 +42,10 @@ body {
 }
 
 .main-div h1 {
-    font-size: 3.8rem;
+    font-size: 2.8rem;
     line-height: 1.3;
     color: #333;
-    font-weight: 600;
+    font-weight: 500;
     margin: 0;
 }
 
