--- a/CSS/program.css
+++ b/CSS/program.css
@@ -259,7 +259,8 @@
      /* border-radius: 15px; */
      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
 
-     background: linear-gradient(135deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url('https://cdn.pixabay.com/photo/2018/08/04/11/30/draw-3583548_1280.png');
+     background: linear-gradient(135deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)),
+      url('/img/DMSRC Website/_MG_1346.jpg');
      background-size: cover;
      background-position: center;
      background-attachment: fixed;
@@ -362,7 +363,8 @@
      /* border-radius: 15px; */
      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
 
-     background: linear-gradient(135deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url('https://cdn.pixabay.com/photo/2018/08/04/11/30/draw-3583548_1280.png');
+     background: linear-gradient(135deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)),
+      url('/img/DMSRC Website/271ebbe1-d91c-44ac-9760-1e7fe25a525d.JPG');
      background-size: cover;
      background-position: center;
      background-attachment: fixed;
@@ -436,7 +438,8 @@
      /* border-radius: 15px; */
      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
 
-     background: linear-gradient(135deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url('https://cdn.pixabay.com/photo/2018/08/04/11/30/draw-3583548_1280.png');
+     background: linear-gradient(135deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), 
+     url('/img/DMSRC Website/_MG_1259.jpg');
      background-size: cover;
      background-position: center;
      background-attachment: fixed;
